--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'NA'
 - !lcsh 'St. Martin''s Church (Canterbury, England)'
+- GITenberg
 title: "Bell's Cathedrals: The Church of St. Martin, Canterbury\r\nAn Illustrated\
   \ Account of its History and Fabric"
 url: http://www.gutenberg.org/ebooks/43517
